# app/Http/Controllers/InvoiceController.php
@@ -15,12 +15,53 @@ class InvoiceController extends Controller
 /**
  * @OA\Post(
  *     path="api/invoice",
- *     tags={"invoice"},
+ *     tags={"Invoice"},
  *     summary="Create new invoice",
  *     @OA\RequestBody(
  *         @OA\MediaType(
  *             mediaType="application/json",
  *             @OA\Schema(
+ *                 required={
+ *                      "name",
+ *                      "type",
+ *                      "cost"
+ *                 },
+ *                 @OA\Property(
+ *                     property="name",
+ *                     type="string",
+ *                     description=""
+ *                 ),
+ *                 @OA\Property(
+ *                     property="description",
+ *                     type="string",
+ *                     description=""
+ *                 ),
+ *                 @OA\Property(
+ *                     property="cost",
+ *                     type="integer",
+ *                     description="only positive number"
+ *                 ),
+ *                 @OA\Property(
+ *                     property="type",
+ *                     type="string",
+ *                     description="enum: task, income, expense"
+ *                 ),
+ *                 @OA\Property(
+ *                     property="deadline",
+ *                     type="date",
+ *                     description="assigned link date for invoice"
+ *                 )
+ *             )
+ *         )
+ *     ),
+ *     @OA\Response(
+ *         @OA\MediaType(
+ *             mediaType="application/json",
+ *             @OA\Schema(
+ *                 @OA\Property(
+ *                     property="id",
+ *                     type="integer"
+ *                 ),
  *                 @OA\Property(
  *                     property="name",
  *                     type="string"
@@ -39,18 +80,27 @@ class InvoiceController extends Controller
  *                     description="enum: task, income, expense",
  *                 ),
  *                 @OA\Property(
+ *                     property="deadline",
+ *                     type="date",
+ *                     description=""
+ *                 ),
+ *                 @OA\Property(
  *                     property="status",
  *                     type="string",
- *                     description="enum: active, completed, aborted",
+ *                     description="enum: active, completed, aborted"
  *                 ),
- *                    @OA\Property(
- *                     property="deadline",
- *                     type="date"
+ *                 @OA\Property(
+ *                     property="updated_at",
+ *                     type="date",
+ *                     description=""
+ *                 ),
+ *                 @OA\Property(
+ *                     property="created_at",
+ *                     type="date",
+ *                     description=""
  *                 )
  *             )
- *         )
- *     ),
- *     @OA\Response(
+ *         ),
  *         response=200,
  *         description="Invoice",
  *         )
@@ -58,12 +108,13 @@ class InvoiceController extends Controller
  * )
  */
     public function createInvoice(InvoiceCreateRequest $request){
+        $request['status'] = 'active';
         if($request->type === 'task'){
             $request->merge(['cost' => '0']);
         };
         if($request->type === 'expense'){
-            $decr = $request->cost * -1;
-            $request->merge(['cost' => $decr]);
+            $negative = $request->cost * -1;
+            $request->merge(['cost' => $negative]);
         }
 
         if($request->has('repeat_count') && $request->has('repeat_interval')){
@@ -103,6 +154,97 @@ class InvoiceController extends Controller
         return "Invoice created";
     }
     
+/**
+    * @OA\Get(
+    *      path="/api/invoices",
+    *      summary="Get invoices",
+    *      tags={"Invoice"},
+    *      description="Get invoices by query",
+    *      @OA\Parameter(
+    *            in="path", 
+    *            required=false, 
+    *            name="page", 
+    *            description="",
+    *            @OA\Schema(
+    *                type="integer"
+    *            )
+    *        ),
+    *      @OA\Parameter(
+    *            in="path", 
+    *            required=false, 
+    *            name="minCost", 
+    *            description="",
+    *            @OA\Schema(
+    *                type="integer"
+    *            )
+    *        ),
+    *      @OA\Parameter(
+    *            in="path", 
+    *            required=false, 
+    *            name="maxCost", 
+    *            description="",
+    *            @OA\Schema(
+    *                type="integer"
+    *            )
+    *        ),
+    *      @OA\Parameter(
+    *            in="path", 
+    *            required=false, 
+    *            name="type", 
+    *            description="Status values that need to be considered for filter",
+    *            @OA\Schema(
+    *                type="string",
+    *                default="task",
+    *                enum={"task", "income", "expense"}
+    *            ),
+    *        ),
+    *      @OA\Parameter(
+    *            in="path", 
+    *            required=false, 
+    *            name="status", 
+    *            description="Status values that need to be considered for filter",
+    *            @OA\Schema(
+    *                type="string",
+    *                default="active",
+    *                enum={"active", "completed", "aborted"}
+    *            ),
+    *        ),
+    *      @OA\Parameter(
+    *            in="path", 
+    *            required=false, 
+    *            name="search", 
+    *            description="Search by name, description, cost or tags",
+    *            @OA\Schema(
+    *                type="string"
+    *            )
+    *        ),
+    *      @OA\Parameter(
+    *            in="path", 
+    *            required=false, 
+    *            name="orderBy", 
+    *            @OA\Schema(
+    *                type="string",
+    *                default="status",
+    *                enum={"status", "deadline", "type", "cost"}
+    *            ),
+    *        ),
+    *      @OA\Parameter(
+    *            in="path", 
+    *            required=false, 
+    *            name="orderDir", 
+    *            @OA\Schema(
+    *                type="string",
+    *                default="ASC",
+    *                enum={"ASC", "DESC"}
+    *            ),
+    *        ),
+    *      @OA\Parameter(in="query", required=false, name="search", @OA\Schema(type="string")),
+    *      @OA\Response(
+    *            response=200, 
+    *            description="Successful request"
+    *        ),
+    * )
+ */
     public function getInvoices(Request $request){
         $invoiceQuery = Invoice::query();
         
@@ -137,7 +279,32 @@ class InvoiceController extends Controller
         }
         return $invoiceQuery->with(['tags'])->paginate(25);
     }
-
+    /**
+     * @OA\Delete(
+     *     path="/api/invoice/{invoiceId}",
+     *     tags={"Invoice"},
+     *     summary="Delete invoice by id",
+     *     operationId="deleteInvoice",
+     *     @OA\Parameter(
+     *         name="invoiceId",
+     *         in="path",
+     *         description="Invoice id to delete",
+     *         required=true,
+     *         @OA\Schema(
+     *             type="integer",
+     *             format="integer"
+     *         ),
+     *     ),
+     *     @OA\Response(
+     *         response=400,
+     *         description="Invalid ID supplied",
+     *     ),
+     *     @OA\Response(
+     *         response=404,
+     *         description="Invoice not found",
+     *     ),
+     * )
+     */
     public function deleteInvoice($id){
         $invoice = Invoice::findOrFail($id);
         $invoice->delete();
@@ -145,6 +312,107 @@ class InvoiceController extends Controller
         return "anal content";
     }
 
+ /**
+ * @OA\Patch(
+ *     path="api/invoice/{InvoiceId}",
+ *     tags={"Invoice"},
+ *     summary="Update data for invoice by id",
+ *     @OA\Parameter(
+ *            in="path", 
+ *            required=true, 
+ *            name="InvoiceId", 
+ *            description="",
+ *            @OA\Schema(
+ *                type="integer"
+ *            )
+ *     ),
+ *     @OA\RequestBody(
+ *         @OA\MediaType(
+ *             mediaType="application/json",
+ *             @OA\Schema(
+ *                 required={},
+ *                 @OA\Property(
+ *                     property="name",
+ *                     type="string"
+ *                 ),
+ *                 @OA\Property(
+ *                     property="description",
+ *                     type="string"
+ *                 ),
+ *                 @OA\Property(
+ *                     property="cost",
+ *                     type="integer"
+ *                 ),
+ *                 @OA\Property(
+ *                     property="type",
+ *                     type="string",
+ *                     description="enum: task, income, expense",
+ *                 ),
+ *                 @OA\Property(
+ *                     property="status",
+ *                     type="string",
+ *                     description="enum: active, completed, aborted",
+ *                 ),
+ *                 @OA\Property(
+ *                     property="deadline",
+ *                     type="date"
+ *                 )
+ *             )
+ *         )
+ *     ),
+ *     @OA\Response(
+ *         @OA\MediaType(
+ *             mediaType="application/json",
+ *             @OA\Schema(
+ *                 @OA\Property(
+ *                     property="id",
+ *                     type="integer"
+ *                 ),
+ *                 @OA\Property(
+ *                     property="name",
+ *                     type="string"
+ *                 ),
+ *                 @OA\Property(
+ *                     property="description",
+ *                     type="string"
+ *                 ),
+ *                    @OA\Property(
+ *                     property="cost",
+ *                     type="integer"
+ *                 ),
+ *                 @OA\Property(
+ *                     property="type",
+ *                     type="string",
+ *                     description="enum: task, income, expense",
+ *                 ),
+ *                 @OA\Property(
+ *                     property="deadline",
+ *                     type="date",
+ *                     description=""
+ *                 ),
+ *                 @OA\Property(
+ *                     property="status",
+ *                     type="string",
+ *                     description="enum: active, completed, aborted"
+ *                 ),
+ *                 @OA\Property(
+ *                     property="updated_at",
+ *                     type="date",
+ *                     description=""
+ *                 ),
+ *                 @OA\Property(
+ *                     property="created_at",
+ *                     type="date",
+ *                     description=""
+ *                 )
+ *             )
+ *         ),
+ *         response=200,
+ *         description="Invoice",
+ *         )
+ *     )
+ * )
+ */
     public function updateInvoice(InvoiceCreateRequest $request, Invoice $invoice){
         if($request->type === 'task'){
             $request->merge(['cost' => '0']);
@@ -164,6 +432,36 @@ class InvoiceController extends Controller
         return $invoice;
     }
 
+/**
+    * @OA\Get(
+    *      path="/api/summary",
+    *      summary="Get summary invoices cost count",
+    *      tags={"Invoice"},
+    *      description="Get summary by dates",
+    *      @OA\Parameter(
+    *            in="path", 
+    *            required=true, 
+    *            name="startDate", 
+    *            description="format: HHHH-mm-dd",
+    *            @OA\Schema(
+    *                type="date"
+    *            )
+    *        ),
+    *      @OA\Parameter(
+    *            in="path", 
+    *            required=true, 
+    *            name="endDate", 
+    *            description="format: HHHH-mm-dd",
+    *            @OA\Schema(
+    *                type="date"
+    *            )
+    *        ),
+    *      @OA\Response(
+    *            response=200, 
+    *            description="Successful request"
+    *        ),
+    * )
+ */
     public function getSumOfDates(InvoiceSumOfDatesRequest $request){
         $startOfDate = Carbon::createFromFormat('Y-m-d',$request->input('startDate'));
         $endDate = Carbon::createFromFormat('Y-m-d',$request->input('endDate'));
@@ -184,6 +482,90 @@ class InvoiceController extends Controller
         return $sumAll;
     }
 
+/**
+ * @OA\Post(
+ *     path="api/attachTags",
+ *     tags={"Tag"},
+ *     summary="Attach tag to invoice",
+ *     @OA\RequestBody(
+ *         @OA\MediaType(
+ *             mediaType="application/json",
+ *             @OA\Schema(
+ *                 required={
+ *                      "invoice_id",
+ *                      "tag_id"
+ *                 },
+ *                 @OA\Property(
+ *                     property="invoice_id",
+ *                     type="integer",
+ *                     description=""
+ *                 ),
+ *                 @OA\Property(
+ *                     property="tag_id",
+ *                     type="array",
+ *                     collectionFormat="multi",
+ *                     @OA\Items(
+ *                          type="integer", 
+ *                          format="id"
+ *                     ),
+ *                     description="[tag_id1, tag_id2...]"
+ *                 )
+ *             )
+ *         )
+ *     ),
+ *     @OA\Response(
+ *         @OA\MediaType(
+ *             mediaType="application/json",
+ *             @OA\Schema(
+ *                 @OA\Property(
+ *                     property="id",
+ *                     type="integer"
+ *                 ),
+ *                 @OA\Property(
+ *                     property="name",
+ *                     type="string"
+ *                 ),
+ *                 @OA\Property(
+ *                     property="description",
+ *                     type="string"
+ *                 ),
+ *                    @OA\Property(
+ *                     property="cost",
+ *                     type="integer"
+ *                 ),
+ *                 @OA\Property(
+ *                     property="type",
+ *                     type="string",
+ *                     description="enum: task, income, expense",
+ *                 ),
+ *                 @OA\Property(
+ *                     property="deadline",
+ *                     type="date",
+ *                     description=""
+ *                 ),
+ *                 @OA\Property(
+ *                     property="status",
+ *                     type="string",
+ *                     description="enum: active, completed, aborted"
+ *                 ),
+ *                 @OA\Property(
+ *                     property="updated_at",
+ *                     type="date",
+ *                     description=""
+ *                 ),
+ *                 @OA\Property(
+ *                     property="created_at",
+ *                     type="date",
+ *                     description=""
+ *                 )
+ *             )
+ *         ),
+ *         response=200,
+ *         description="Invoice",
+ *         )
+ *     )
+ * )
+ */
     public function attachTags(AttachTagRequest $request){
         $invoiceId = $request->input('invoice_id');
         $tagsId = $request->input('tag_id');
